--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
    <script src="analytics.js"></script>
    <!--script src="//wzrd.in/standalone/browserfs@0.6.1"></script-->
    <script src="browserfs.min.js"></script>
-   <script src="libretro.js"></script>
+   <script src="libretro.js" type=module></script>
    <div align="center">
    <a href="https://www.patreon.com/libretro">
       <img src="https://patreon_public_assets.s3.amazonaws.com/sized/becomeAPatronBanner.png" width="350" height="116"></a>
