--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                           <a class="dropdown-item" href="." data-core="theodore">Theodore (Thomson TO8/TO9)</a>
                           <a class="dropdown-item" href="." data-core="vba_next">VBA Next (Gameboy Advance)</a>
                         </div>
-                        <button class="btn btn-primary disabled" id="btnRun" onclick="startRetroArch()" disabled>
+                        <button class="btn btn-primary" id="btnRun">
                            <span class="fa fa-spinner fa-spin" id="icnRun"></span> Run
                         </button>
 
